--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -49,8 +49,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/me.mp4
-    - assets/avatar.jpg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
