--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "example",
-            "cwd": "example",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "example (profile mode)",
-            "cwd": "example",
-            "request": "launch",
+            "name": "Flutter",
             "type": "dart",
-            "flutterMode": "profile"
-        }
+            "request": "launch",
+            "program": "example/lib/main.dart",
+            "args": [
+                "--dart-define=SERVER_URL=http://192.168.8.168:8080"
+            ]
+        },
     ]
 }
