--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  intl: ^0.17.0
   shared_preferences: ^2.0.15
   video_player: ^2.4.2
 
