--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   device_info_plus: ^3.2.3
   flutter:
     sdk: flutter
+  google_fonts: ^3.0.1
   http: ^0.13.4
   intl: ^0.17.0
   shared_preferences: ^2.0.15
@@ -26,12 +27,10 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
-flutter: null
-
-# To add assets to your plugin package, add an assets section, like this:
-# assets:
-#   - images/a_dot_burr.jpeg
-#   - images/a_dot_ham.jpeg
+flutter: 
+  assets:
+    - assets/logo.png
+    - assets/pal_text.png
 #
 # For details regarding assets in packages, see
 # https://flutter.dev/assets-and-images/#from-packages
