--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  pal:
+  pal_video:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
