--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: pal_video
 description: Your in-app friend that creates a real link with your users. 
 version: 0.0.1
+repository: 
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -23,6 +24,7 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.2.0
   mocktail: ^0.3.0
+  video_player_platform_interface: ^5.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
