--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: pal_video
 description: Your in-app friend that creates a real link with your users. 
 version: 0.0.1
 repository: 
+homepage: https://pal.video
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
